--- a/style_service.css
+++ b/style_service.css
@@ -68,45 +68,12 @@ nav li a:hover{
     box-shadow: inset 5px 5px 80px 0px black;
 }
 
-contenu form {
+contenu p {
     padding: 15%;
     text-align: center;
     font-size: 200%;
+    box-shadow:  0px 5px 80px 0px black;
 }
-
-input {
-    padding-inline-end: 40%;
-    font-size: medium;
-    text-align: center;
-}
-
-input#send{
-    margin-top: 2%;
-    padding-inline: 10%;
-    padding-block: 2%;
-    font-size: medium;
-}
-
-input#msg {
-    padding-inline-end: 80%;
-    padding-block-end: 70%;
-    font-size: medium;
-}
-
-
-contenu table {
-    width: 90%;
-    margin-left: 10%;
-    text-align: right;
-}
-contenu td.info{
-    box-shadow: inset 1px 1px 100px white;
-}
-
-contenu td img{
-    width: 80%;
-}
-
 footer {
     padding-top: 5%;
     padding-left: 2%;
@@ -127,17 +94,12 @@ footer td.coordonnee img{
     width: 1.5%;
 }
 footer td.coordonnee{
-    width: 50%;
+    width: fit-content;
 }
 
 footer td.logo{
     width: fit-content;
 }
-
-footer td.contact{
-    padding: auto;
-}
-
 footer a.foot{
     font-size: 2em;
     text-decoration: none;
@@ -145,9 +107,10 @@ footer a.foot{
     box-shadow: 0px 0px 20px 0px black;
     padding: 10px 10px;
     border-radius: 10px;
+    margin-right: 0;
 }
 footer a:hover.foot{
-    box-shadow: inset 0px 0px 15px 0px black;
+    box-shadow: inset 0px 0px 15px 0px black;;
 }
 
 footer a.tel{
