--- a/style_service.css
+++ b/style_service.css
@@ -51,7 +51,7 @@ nav a{
     font-weight: bold;
     font-size: large;
 }
-nav a.logo{
+a.logo{
     width: fit-content;
     text-align: center;
     margin-left: 45%;
