--- a/style_index.css
+++ b/style_index.css
@@ -43,6 +43,7 @@ nav ul::after{
 }
 
 nav a{
+    width: fit-content;
     display: block;
     text-decoration: none;
     color: black;
@@ -55,7 +56,6 @@ a.logo{
     width: fit-content;
     text-align: center;
     margin-left: 45%;
-    margin-right: 45%;
 }
 
 nav li a:hover{
@@ -72,9 +72,10 @@ contenu p {
     padding: 15%;
     text-align: center;
     font-size: 200%;
-    box-shadow:  0px 5px 80px 0px black;
 }
 footer {
+    width: 100%;
+    max-width: fit-content;
     padding-top: 5%;
     padding-left: 2%;
     padding-bottom: 2%;
@@ -94,12 +95,21 @@ footer td.coordonnee img{
     width: 1.5%;
 }
 footer td.coordonnee{
-    width: fit-content;
+    width: 30%;
+}
+
+footer td.rs {
+    width: 25%;
 }
 
 footer td.logo{
-    width: fit-content;
+    width: 20%;
 }
+
+footer td.contact{
+    width: 25%;
+}
+
 footer a.foot{
     font-size: 2em;
     text-decoration: none;
@@ -110,7 +120,7 @@ footer a.foot{
     margin-right: 0;
 }
 footer a:hover.foot{
-    box-shadow: inset 0px 0px 15px 0px black;;
+    box-shadow: inset 0px 0px 15px 0px black;
 }
 
 footer a.tel{
@@ -122,3 +132,206 @@ footer a.tel{
 footer a:hover{
     color: red;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 30%;
+  }
+  
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-instagram {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-linkedin {
+    background: #3B5998;
+    color: white;
+  }
+
+  @media screen and (max-width: 500px){
+    *{
+        margin: 0px;
+        padding: 0px;
+        font-family: Avenir, sans-serif;
+    }
+    
+    nav{
+        width: 100%;
+        margin: 0 auto;
+        background-color: white;
+        position: sticky;
+        top: 0px;
+    }
+    
+    .logo{
+        text-align: center;
+    }
+    
+    .menu {
+        padding: 1%;
+        box-shadow: 0px 15px 20px 0px black;
+        border-radius: 15px;
+        background: linear-gradient(rgb(44, 152, 253),white,white);
+    }
+    
+    
+    nav ul{
+        list-style-type: none;
+    }
+    
+    nav ul li{
+        float: left;
+        width: 25%;
+        text-align: center;
+        position: relative;
+    }
+    
+    nav ul::after{
+        content: "";
+        display: table;
+        clear: both;
+    }
+    
+    nav a{
+        width: fit-content;
+        display: block;
+        text-decoration: none;
+        color: black;
+        border-bottom: 2px solid transparent;
+        padding: 10px 0px;
+        font-weight: bold;
+        font-size: large;
+    }
+    a.logo{
+        text-align: justify;
+        margin-left: calc(500px - 90%);
+    }
+    
+    nav li a:hover{
+        color: red;
+        text-shadow: 5px 5px 10px  black;
+    }
+    
+    .conteneur{
+        text-align: center;
+        box-shadow: inset 5px 5px 80px 0px black;
+    }
+    
+    contenu p {
+        padding: 15%;
+        text-align: center;
+        font-size: 200%;
+    }
+    footer {
+        width: 100%;
+        max-width: fit-content;
+        padding-top: 5%;
+        padding-left: 2%;
+        padding-bottom: 2%;
+        padding-right: 2%;
+        background: linear-gradient(white,rgb(44, 152, 253),rgb(44, 152, 253));
+    }
+    footer .droite{
+        text-align: right;
+        width: 100%;
+    }
+    
+    footer table{
+        width: 100%;
+    }
+    
+    footer td.coordonnee img{
+        width: 1.5%;
+    }
+    footer td.coordonnee{
+        width: 30%;
+        font-size: x-small;
+    }
+    
+    footer td.rs {
+        width: 25%;
+        font-size: x-small;
+    }
+    
+    footer td.logo{
+        width: 20%;
+        font-size: x-small;
+    }
+    
+    footer td.contact{
+        width: 25%;
+        font-size: 0.4em;
+    }
+
+    footer td.logo img{
+        width: 0px;
+        margin: 0;
+        padding: 0;
+    }
+    
+    footer a.foot{
+        font-size: 2em;
+        text-decoration: none;
+        color: black;
+        box-shadow: 0px 0px 20px 0px black;
+        padding: 10px 10px;
+        border-radius: 10px;
+        margin-right: 0;
+    }
+    footer a:hover.foot{
+        box-shadow: inset 0px 0px 15px 0px black;
+    }
+    
+    footer a.tel{
+        text-decoration: none;
+        color: black;
+        border-bottom: 2px solid transparent;
+    }
+    
+    footer a:hover{
+        color: red;
+    }
+    
+    .fa {
+        padding: 5px;
+        width: 12px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 30%;
+        font-size: x-small;
+      }
+      
+      .fa:hover {
+        opacity: 0.7;
+      }
+      
+      
+      .fa-facebook {
+        background: #3B5998;
+        color: white;
+      }
+      
+      .fa-instagram {
+        background: #55ACEE;
+        color: white;
+      }
+    
+      .fa-linkedin {
+        background: #3B5998;
+        color: white;
+      }
+  }
