--- a/style_service.css
+++ b/style_service.css
@@ -20,7 +20,7 @@ nav{
 .menu {
     padding: 1%;
     box-shadow: 0px 15px 20px 0px black;
-    border-radius: 15px;
+    border-radius: 150px;
     background: linear-gradient(rgb(44, 152, 253),white,white);
 }
 
@@ -63,18 +63,40 @@ nav li a:hover{
     text-shadow: 5px 5px 10px  black;
 }
 
-.conteneur{
+h1.titre{
+    margin-top: 5%;
     text-align: center;
-    box-shadow: inset 5px 5px 80px 0px black;
+    text-decoration: underline;
+}
+
+contenu h1 {
+    text-align: center;
 }
 
 contenu p {
-    padding: 15%;
-    text-align: center;
-    font-size: 200%;
-    box-shadow:  0px 5px 80px 0px black;
+    text-align: left;
+    font-size: 120%;
 }
+
+contenu div {
+    padding: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    box-shadow: 0px 0px 20px 0px black;
+    border: solid;
+    border-radius: 15px;
+    background: linear-gradient(rgb(44, 152, 253),white,white);
+}
+
+contenu div.one{
+    margin-top: 5%;
+}
+
 footer {
+    width: 100%;
+    max-width: fit-content;
     padding-top: 5%;
     padding-left: 2%;
     padding-bottom: 2%;
@@ -94,12 +116,21 @@ footer td.coordonnee img{
     width: 1.5%;
 }
 footer td.coordonnee{
-    width: fit-content;
+    width: 30%;
+}
+
+footer td.rs {
+    width: 25%;
 }
 
 footer td.logo{
-    width: fit-content;
+    width: 20%;
 }
+
+footer td.contact{
+    width: 25%;
+}
+
 footer a.foot{
     font-size: 2em;
     text-decoration: none;
@@ -110,7 +141,7 @@ footer a.foot{
     margin-right: 0;
 }
 footer a:hover.foot{
-    box-shadow: inset 0px 0px 15px 0px black;;
+    box-shadow: inset 0px 0px 15px 0px black;
 }
 
 footer a.tel{
@@ -122,3 +153,101 @@ footer a.tel{
 footer a:hover{
     color: red;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 30%;
+  }
+  
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-instagram {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-linkedin {
+    background: #3B5998;
+    color: white;
+  }
+
+  @media screen and (max-width: 700px) and (min-width: 350px){
+   
+    a.logo{
+        text-align: justify;
+        margin-left: 25%;
+    }
+    
+    footer td.contact{
+        width: 25%;
+        font-size: 0.4em;
+    }
+  
+    .fa {
+        padding: 10px;
+        width: 12px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 30%;
+        font-size: small;
+      }
+  }
+
+  @media screen and (max-width: 350px) {
+  
+    td.coordonnee p,td.coordonnee b{
+        font-size: small;
+    }
+
+    a.logo{
+        text-align: justify;
+        margin-left: 20%;
+    }
+  
+    footer td.contact{
+        width: 25%;
+        font-size: 0.32em;
+    }
+
+    .fa {
+        padding: 5px;
+        width: 12px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 30%;
+        font-size: small;
+      }
+    }
+    @media screen and (max-width: 1000px) and (min-width: 700px) {
+  
+        a.logo{
+            text-align: justify;
+            margin-left: 40%;
+        }
+      
+        footer td.contact{
+            width: 25%;
+            font-size: 0.8em;
+        }
+    
+        .fa {
+            padding: 20px;
+            width: 12px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 30%;
+            font-size: large;
+          }
+  }
