--- a/style_contact.css
+++ b/style_contact.css
@@ -55,8 +55,8 @@ a.logo{
     width: fit-content;
     text-align: center;
     margin-left: 45%;
-    margin-right: 45%;
 }
+
 
 nav li a:hover{
     color: red;
@@ -74,44 +74,27 @@ h1.titre{
     box-shadow: inset 5px 5px 80px 0px black;
 }
 
-contenu form {
-    padding: 15%;
-    text-align: center;
-    font-size: 200%;
-}
-
-input {
-    padding-inline-end: 40%;
-    font-size: medium;
-    text-align: center;
-}
-
-input#send{
-    margin-top: 2%;
-    padding-inline: 10%;
-    padding-block: 2%;
-    font-size: medium;
-}
-
-input#msg {
-    padding-inline-end: 80%;
-    padding-block-end: 70%;
-    font-size: medium;
-}
-
 
 contenu table {
-    width: 90%;
-    margin-left: 10%;
-    text-align: right;
-}
-contenu td.info{
-    box-shadow: inset 1px 1px 100px white;
+    width: 100%;
+    margin-top: 5%;
+    text-align: center;
 }
 
-contenu td img{
-    width: 80%;
+
+contenu td.info {
+    width: 50%;
 }
+
+contenu td.info div{
+    width: 100%;
+    height: 374px;
+    background-image: url("./informatique.jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
+    box-shadow: inset 0px 0px 75px 100px white;
+}
+
 
 footer {
     padding-top: 5%;
@@ -165,3 +148,172 @@ footer a.tel{
 footer a:hover{
     color: red;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 30%;
+  }
+  
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-instagram {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-linkedin {
+    background: #3B5998;
+    color: white;
+  }
+
+  @media screen and (max-width: 700px) and (min-width: 350px){
+   
+    a.logo{
+        text-align: justify;
+        margin-left: 25%;
+    }
+    
+    footer td.contact{
+        width: 25%;
+        font-size: 0.4em;
+    }
+  
+    .fa {
+        padding: 10px;
+        width: 12px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 30%;
+        font-size: small;
+      }
+  }
+
+  @media screen and (max-width: 350px) {
+  
+    td.coordonnee p,td.coordonnee b{
+        font-size: small;
+    }
+
+    a.logo{
+        text-align: justify;
+        margin-left: 20%;
+    }
+  
+    footer td.contact{
+        width: 25%;
+        font-size: 0.32em;
+    }
+
+    .fa {
+        padding: 5px;
+        width: 12px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 30%;
+        font-size: small;
+      }
+    }
+    @media screen and (max-width: 1000px) and (min-width: 700px) {
+  
+        a.logo{
+            text-align: justify;
+            margin-left: 40%;
+        }
+      
+        footer td.contact{
+            width: 25%;
+            font-size: 0.8em;
+        }
+    
+        .fa {
+            padding: 20px;
+            width: 12px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 30%;
+            font-size: large;
+          }
+  }
+
+
+
+
+
+
+
+
+
+.form-style {
+    margin:10px auto;
+    width: 400px;
+    padding: 20px 12px 10px 20px;
+    font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  }
+  .form-style td {
+    padding: 0;
+    display: block;
+    list-style: none;
+    margin: 10px 0 0 0;
+  }
+  .form-style label{
+    margin:0 0 3px 0;
+    padding:0px;
+    display:block;
+    font-weight: bold;
+  }
+  .form-style .required{
+    color:red;
+  }
+  .form-style input[type=submit], .form-style input[type=reset]{
+    background: #4eb5f1;
+    padding: 8px 15px 8px 15px;
+    border: none;
+    color: #fff;
+  }
+  .form-style input[type=submit]:hover, .form-style input[type=reset]:hover{
+    background: #4eb5f1;
+    box-shadow:none;
+    -moz-box-shadow:none;
+    -webkit-box-shadow:none;
+  }
+  .form-style .field-textarea{
+    height: 100px;
+  }
+  .form-style input[type=text], 
+  .form-style input[type=email],
+  textarea{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    border:1px solid #BEBEBE;
+    padding: 7px;
+    margin:0px;
+    outline: none;  
+  }
+  .form-style .long{
+    width: 100%;
+  }
+  .form-style input[type=text]:focus, 
+  .form-style input[type=email]:focus,
+  .form-style textarea:focus{
+    -moz-box-shadow: 0 0 8px #88D5E9;
+    -webkit-box-shadow: 0 0 8px #88D5E9;
+    box-shadow: 0 0 8px #88D5E9;
+    border: 1px solid #88D5E9;
+  }
+  .error{
+    color: #D8000C;
+    background-color: #FFBABA;
+  }
