--- a/style_contact.css
+++ b/style_contact.css
@@ -81,6 +81,52 @@ contenu table {
     text-align: center;
 }
 
+h1.bg{
+    color: #065c8d;
+    text-shadow: 5px 5px 6px grey;
+}
+
+.button {
+    display: inline-block;
+    text-shadow: 5px 5px 6px grey;
+    border-radius: 15px;
+    background-color: rgb(44, 152, 253);
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 3%;
+    width: 40%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    box-shadow: 5px 5px 6px grey;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
 
 contenu td.info {
     width: 50%;
