--- a/style_contact.css
+++ b/style_contact.css
@@ -178,7 +178,7 @@ footer td.rs {
 }
 
 footer td.contact{
-    padding: auto;
+    width: 25%;
 }
 
 footer a.foot{
@@ -188,6 +188,7 @@ footer a.foot{
     box-shadow: 0px 0px 20px 0px black;
     padding: 10px 10px;
     border-radius: 10px;
+    margin-right: 0;
 }
 footer a:hover.foot{
     box-shadow: inset 0px 0px 15px 0px black;
