--- a/style_index.css
+++ b/style_index.css
@@ -74,7 +74,7 @@ contenu p {
 }
 footer {
     width: 100%;
-    max-width: fit-content;
+    margin: 0 auto;
     padding-top: 5%;
     padding-left: 2%;
     padding-bottom: 2%;
