--- a/style_service.css
+++ b/style_service.css
@@ -95,7 +95,7 @@ contenu div.one{
 
 footer {
     width: 100%;
-    max-width: fit-content;
+    margin: 0 auto;
     padding-top: 5%;
     padding-left: 2%;
     padding-bottom: 2%;
